--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,9 @@
 ---
+import ViewTransitions from "astro:transitions";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
+import { ViewTransitions } from "astro:transitions";
+import type { ViewTransitions } from "astro:transitions";
 import "../styles/global.css";
 const {pageTitle} = Astro.props;
 ---
@@ -12,11 +15,12 @@ const {pageTitle} = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{pageTitle}</title>
+		<ViewTransitions />
 	</head>
 	<body>
 		<Header />
 
-		<h1>{pageTitle}</h1>
+		<h1 transition:animate="slide">{pageTitle}</h1>
         <slot />
 		<Footer />
 		<script> import "../scripts/menu.js"; </script>
